# securefs

./: .gitignore  CMakeLists.txt  _clang-format  conanfile.txt  main.cpp  vcpkg.json
.github/workflows/: ccpp.yml
protos/: argopt.proto  cmdline.proto  params.proto
sources/: commands.cpp  di.cpp  di.h  lite_fs.cpp  lite_fs.h  lite_operations.cpp  lite_stream.h
sources/core/: corefs.cpp  corefs.hpp  crypto_io.cpp  crypto_io.hpp  encrypted_sqlitevfs.cpp  encrypted_sqlitevfs.hpp  exceptions.cpp  exceptions.hpp  io.hpp  object.hpp  repo.cpp  repo.hpp  rng.cpp  rng.hpp  sqlitehelper.cpp  sqlitehelper.hpp  sys_io.cpp  sys_io.hpp  tree_db.cpp  tree_db.hpp  utilities.cpp  utilities.hpp
sources/main/: cmdline.cpp  cmdline.hpp  real_main.cpp  real_main.hpp  securefs_winfsp.cpp  securefs_winfsp.hpp  securefs_winfsp_impl.cpp  securefs_winfsp_impl.hpp
sources/protos/: params.proto
test/core/: core_fs_test.cpp  crypto_io_test.cpp  encrypted_sqlitevfs_test.cpp  io_test.cpp  memory_io.cpp  memory_io.hpp  repo_test.cpp  tree_db_test.cpp
test/main/: cmdline_test.cpp
